# cookproject

./: .gitignore  README.md  Streamlit.py  Tags_correlation.py  analyse_recipe.ipynb  app.py  application.py  front.py  mainTest.py  pyproject.toml  rating_recipe_correlation_analysis.ipynb  rating_recipe_correlation_analysis.py  rating_recipe_merge.ipynb  recipes.db  test.py  test_front.py  tp_perceptron_notebook.ipynb  tp_perceptron_source.py
.devcontainer/: devcontainer.json
.github/workflows/: streamlit-app.yml
.ipynb_checkpoints/: analyse_recipe-checkpoint.ipynb  clustering_machine_learning_test-checkpoint.ipynb  final_analysis-checkpoint.ipynb  pre_analyse_recipe-checkpoint.ipynb  rating_recipe_correlation_analysis-checkpoint.ipynb  rating_recipe_merge-checkpoint.ipynb
Pretraitement/: RAW_interactions to recipe_mark.py  RAW_interactions_splited.py  RAW_recipes to recipe_cleaned.ipynb  mainTest.py  recipe_cleaned_part_5.parquet  recipe_mark.parquet
__pytest__/: pytest_1.py  pytest_load_data.py
docs/: recipes.db
docs/source/: test_front.rst
instance/: recipes.db
kitcookproject/: README.md  front.py  pyproject.toml  rating_recipe_correlation_analysis.py
kitcookproject/.github/workflows/: streamlit-app.yml
kitcookproject/Pretraitement/: RAW_recipes to recipe_cleaned.ipynb  RAW_recipes to recipe_cleaned_part_5.csv
kitcookproject/docs/source/: index.rst  modules.rst  rating_recipe_correlation_analysis.rst
kitcookproject/kitcookproject/: front.py
kitcookproject/kitcookproject/.github/workflows/: streamlit-app.yml
kitcookproject/kitcookproject/Analyse/: rating_recipe_correlation_analysis.ipynb
kitcookproject/kitcookproject/Pretraitement/: RAW_interactions_to_recipe_mark.py
kitcookproject/kitcookproject/__pytest__/: pytest_load_data.py
kitcookproject/kitcookproject/docs/source/: conf.py
