[tool.poetry]
name = "kitcookproject"
version = "0.1.0"
description = "env pour analyser les donnees de la societe mangetamain"
authors = ["romainDonne22 <rom.donne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
statsmodels = "^0.14.4"
scikit-learn = "^1.5.2"
streamlit = "^1.40.1"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
pytest = "^8.3.3"
Sphinx = "^8.0.2"
pycodestyle = "^2.12.1"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^2.5.0"
sphinx-rtd-theme = "^3.0.2"
wordcloud = "^1.9.4"
pyarrow = "^12.0.1"

[tool.poetry.packages]
include = ["kitcookproject"]  # Inclure le package principal

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
