[project]
name = "kitcookproject"
version = "0.1.0"
description = ""
authors = [
    {name = "romainDonne22",email = "rom.donne@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pyarrow (>=18.1.0,<19.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "sphinx (>=8.1.3,<9.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
